# color-grid

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
palettes/: .gitignore  README.md  crayola-sample.json
src/color_grid/: _backend_pdf.py  _backend_svg.py  cli.py  grid.py  keys.py  palette.py  quantize.py  render.py
src/color_grid/web/: __init__.py  __main__.py  app.py  state.py
src/color_grid/web/static/: style.css
src/color_grid/web/templates/: base.html  index.html
src/color_grid/web/templates/partials/: error.html  preview.html  upload_ok.html
tests/: test_smoke.py  test_web.py
